--- a/loggerhead/static/css/style.css
+++ b/loggerhead/static/css/style.css
@@ -216,7 +216,7 @@ div.links div {
 }
 
 .log-entries .revision-header {
-    font-size: normal;
+    font-size: 1.0em;
 }
 
 .log-entries .revision-header td {
