--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -167,20 +167,20 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 .expandcell, .expcell {
 	width:28px;	
 }
-.summarycell, .authorcell, .datecell, .summcell, .autcell, .datr {
+.summarycell, .authorcell, .datecell, .summcell, .autcell, .date {
 	padding:4px 8px;
 	border:1px solid #d2d2d2;
 }
 .authorcell, .autcell {
 	width:202px;
 }
-.datecell, .datr {
+.datecell, .date {
 	width:100px;
 }
 .downloadcell, .downr {
 	width:47px;
 }
-.revnro, .expcell, .diffr, .summcell, .autcell, .datr, .downr {
+.revnro, .expcell, .diffr, .summcell, .autcell, .date, .downr {
 	border:none;
 	border-bottom:1px solid #d2d2d2;
 }
