--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -152,13 +152,13 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 	padding:0px;
 	margin:0px;
 }
-.blueRow, .lightblueRow {
+.blueRow0, .blueRow1 {
 	background:#eef6fa;
 	font:normal 14px/normal sans-serif;	
 	padding:0px;
 	margin:0px;
 }
-.lightblueRow {
+.blueRow1 {
 	background:#f8fbfd;
 }
 .revisionnumber, .expandcell, .diffcell, .downloadcell, .revnro, .expcell, .diffr, .downr {
@@ -189,8 +189,6 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 }
 ul.expandrev {
 	list-style:none;
-	margin:10px 0px 5px 0px;
-	padding:0px;
 	font:normal 11px/normal sans-serif;
 	color:#000;
 }
