--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -28,8 +28,8 @@ form {
 }
 .fr {float:right;}
 .fl {float:left;}
-
-/* Loggerhead Menu tabs */
+/*General Content*/
+/*Loggerhead Menu tabs*/
 ul#menuTabs {
 	width:98%;
 	height:33px;
@@ -67,8 +67,7 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 	background:#666 url(../images/bg_Tabs.gif) top center;
 	text-decoration:none;
 }
-
-/* Search & RSS */
+/*Search & RSS*/
 #finderBox {
 	width:300px;
 	float:right;
@@ -98,8 +97,7 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 	display:inline;
 	padding:0px 0px 0px 10px;
 }
-
-/* General Content */
+/*Loggerhead General Content*/
 #loggerheadCont {
 	width:98%;
 	padding:10px 1%;
@@ -111,6 +109,9 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 	color:#666;
 	margin:0px;
 	padding:10px 0px 5px 0px;
+}
+#loggerheadCont h1 span {
+	color:#889ea9;
 }
 #loggerheadCont p {
 	color:#000;
@@ -134,14 +135,13 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 	color:#CC6600;
 	text-decoration:none;		
 }
-
 /*Log Table*/
 #logentries {
 	caption-side:top;
 	width:99%;
 	margin:0px auto 10px auto;
 	padding:0px;
-	background:#fff;
+	background:#ff0;
 	border:none;
 	border-spacing:0px;
 	border-collapse:collapse;
@@ -152,13 +152,13 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 	padding:0px;
 	margin:0px;
 }
-.blueRow0, .blueRow1 {
+.blueRow, .lightblueRow {
 	background:#eef6fa;
 	font:normal 14px/normal sans-serif;	
 	padding:0px;
 	margin:0px;
 }
-.blueRow1 {
+.lightblueRow {
 	background:#f8fbfd;
 }
 .revisionnumber, .expandcell, .diffcell, .downloadcell, .revnro, .expcell, .diffr, .downr {
@@ -170,88 +170,92 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 .expandcell, .expcell {
 	width:28px;	
 }
-.summarycell, .authorcell, .datecell, .summcell, .autcell, .date {
+.summarycell, .authorcell, .datecell, .summcell, .autcell, .datr {
 	padding:4px 8px;
 	border:1px solid #d2d2d2;
 }
 .authorcell, .autcell {
 	width:202px;
 }
-.datecell, .date {
+.datecell, .datr {
 	width:100px;
 }
 .downloadcell, .downr {
 	width:47px;
 }
-.revnro, .expcell, .diffr, .summcell, .autcell, .date, .downr {
+.revnro, .expcell, .diffr, .summcell, .autcell, .datr, .downr {
 	border:none;
 	border-bottom:1px solid #d2d2d2;
 }
-.revisioninfo {
-    margin-top:4px;
-}
-ul.expandrev {
+ul#expandrev {
 	list-style:none;
+	margin:10px 0px 5px 0px;
+	padding:0px;
 	font:normal 11px/normal sans-serif;
 	color:#000;
 }
-ul.expandrev li {
+ul#expandrev li {
 	padding:2px 0px 2px 20px;
 	margin:0px 0px 2px 0px;
 }
-ul.expandrev li.mergefrom {
+ul#expandrev li.mergefrom {
 	background:url(../images/ico_mergefrom.gif) 0px 0px no-repeat;
 }
-ul.expandrev li.committerli {
+ul#expandrev li.committerli {
 	background:url(../images/ico_committer.gif) 2px 0px no-repeat;
 }
-ul.expandrev li.desc {
+ul#expandrev li.desc {
 	background:url(../images/ico_description.gif) 0px 0px no-repeat;
 	color:#666;
 }
-ul.expandrev li.files {
+ul#expandrev li.files {
 	background:url(../images/ico_file.gif) 2px 0px no-repeat;
-    margin-left: 8px;
 }
-
-/* Navigation */
+/*Pagination Style*/
 ul {border:0; margin:0; padding:0;}
 
-ul#pages {
+ul#pagination {
 	float:right;
 }
-#pages li {
+#pagination li {
 	border:0; margin:0; padding:0;
 	font-size:12px;
 	list-style:none;
 	float:left;
 	display:inline;
 }
-#pages a {
+#pagination a {
 	border:solid 1px #DDDDDD;
 	margin-right:2px;
 }
-#pages .next a, #pages .previous a {
+#pagination .previous-off, #pagination .next-off {
+	color:#666666;
+	display:block;
+	float:left;
+	font-weight:bold;
+	padding:3px 4px;
+}
+#pagination .next a, #pagination .previous a {
 	font-weight:bold;
 	border:solid 1px #fff;
 }
-#pages .active {
+#pagination .active {
 	color:#f37b06;
 	font-weight:bold;
 	display:block;
 	float:left;
 	padding:4px 6px;
 }
-#pages a:link, #pages a:visited {
+#pagination a:link,#pagination a:visited {
 	color:#f37b06;
 	display:block;
 	float:left;
 	padding:3px 6px;
 	text-decoration:none;
 }
-#pages .next a {
+#pagination .next a {
 	color:#0f6b97;
 }
-#pages a:hover {
+#pagination a:hover{
 	border:solid 1px #666666;
 }		
