--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -164,7 +164,7 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 .blueRow1 {
 	background:#f8fbfd;
 }
-.revisionnumber, .expandcell, .diffcell, .downloadcell, .revnro, .expcell, .diffr, .downr {
+.revisionnumber, .expandcell, .diffcell, .downloadcell, .revnro, .expcell, .diffr, .downr, .allicones {
 	padding:4px 0px;
 	width:42px;
 	text-align:center;
@@ -186,7 +186,7 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 .downloadcell, .downr {
 	width:47px;
 }
-.revnro, .expcell, .diffr, .summcell, .autcell, .date, .downr {
+.revnro, .expcell, .diffr, .summcell, .autcell, .date, .downr, .allicones {
 	border:none;
 	border-bottom:1px solid #d2d2d2;
 }
