* Show auto-suggest in a nicer more ajaxish way  * Switch again to mootools 1.2, I promise, this is the last time

--- a/loggerhead/static/css/zptstyle.css
+++ b/loggerhead/static/css/zptstyle.css
@@ -668,3 +668,13 @@ span.folder {
 .browse-view td.feed {
 	width: 16px;
 }
+
+/*Search Box*/
+#search_terms {
+    display:none;
+    border:solid 1px black;
+    width:300px;
+    overflow:auto;
+    background: #fff;
+}
+
