* Make changelog view compatible with IE6/7

--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -29,6 +29,10 @@ form {
 .fr {float:right;}
 .fl {float:left;}
 
+ul {
+    list-style:none;
+}
+
 /* Loggerhead Menu tabs */
 ul#menuTabs {
 	width:98%;
