--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -97,6 +97,13 @@ ul#menuTabs li a#on:link, ul#menuTabs li a#on:visited, ul#menuTabs a#on:hover {
 	background:#fff url(../images/bg_search_input.gif) 118px 3px no-repeat;
 	border:1px solid #e9e9e9;
 }
+#search_terms {
+    display:none;
+    border:solid 1px black;
+    width:180px;
+    overflow:auto;
+    background: #fff;
+}
 .rssfeed {
 	float:left;
 	display:inline;
