--- a/loggerhead/static/css/files.css
+++ b/loggerhead/static/css/files.css
@@ -7,7 +7,7 @@
 	background:#fcfcfc;
 	border:1px solid #b7b7b7;
 }
-.information, .comiter, .timer, .mfrom, .revid {
+.information, .comiter, .timer, .mfrom, .mto, .revid {
 	float:left;
 	margin:0px 10px 5px 0px;
 	padding:0px 0px 2px 18px;
@@ -20,8 +20,7 @@
     padding:1px 0px 0px 18px;
     margin:0px 10px 5px 0px;
 }
-.comiter, .mfrom {
-	clear:none;
+.comiter, .mfrom, .mto {
 	color:#000;
 	padding:1px 0px 0px 18px;
 	margin:0px 10px 5px 0px;
@@ -39,6 +38,9 @@
 }
 .mfrom {
 	background:url(../images/ico_mergefrom.gif) no-repeat top left;
+}
+.mto {
+	background:url(../images/ico_mergetop.gif) no-repeat top left;
 }
 .information {
     clear:both;
