Added breadcrumb links to the directory browser
This required moving the breadcrumb css class to global.css since it is now
used from more than one location.

--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -318,4 +318,9 @@ ul#pages {
 }
 #pages a:hover {
 	border:solid 1px #666666;
-}		
+}
+a.breadcrumb {
+	color:#889ea9;
+	font-weight:bold;
+	font-size:18px;
+}
