Added hover styling for breadcrumb links.

--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -319,8 +319,13 @@ ul#pages {
 #pages a:hover {
 	border:solid 1px #666666;
 }
-a.breadcrumb {
+.breadcrumb a {
 	color:#889ea9;
+	font-weight:bold;
+	font-size:18px;
+}
+.breadcrumb a:hover{
+	color:#666;
 	font-weight:bold;
 	font-size:18px;
 }
