--- a/loggerhead/static/css/diff.css
+++ b/loggerhead/static/css/diff.css
@@ -31,7 +31,7 @@ ul#list-files li.desc {
 	width:493px;
 	margin:0px 0px 5px 0px;
 }
-.information, .comiter, .timer, .mfrom, .mto, .revid {
+.information, .committer, .timer, .mfrom, .mto, .revid {
 	clear:both;
 	margin:0px;
 	padding:0px 0px 2px 18px;
@@ -43,7 +43,7 @@ ul#list-files li.desc {
     padding:1px 0px 0px 18px;
     margin:0px 10px 5px 0px;
 }
-.comiter, .mfrom, .mto {
+.committer, .mfrom, .mto {
 	color:#000;
 	padding:1px 0px 0px 18px;
 	margin:0px 10px 5px 0px;
