--- a/loggerhead/static/css/files.css
+++ b/loggerhead/static/css/files.css
@@ -1,5 +1,5 @@
 /*Info Box*/
-#infoContainer {
+.infoContainer {
 	width:900px;
 	padding:10px 10px 0px 10px;
 	margin:0px 0px 10px 0px;
@@ -7,7 +7,7 @@
 	background:#fcfcfc;
 	border:1px solid #b7b7b7;
 }
-.information, .comiter, .timer, .mfrom, .mto, .revid {
+.information, .committer, .timer, .mfrom, .mto, .revid {
 	float:left;
 	margin:0px 10px 5px 0px;
 	padding:0px 0px 2px 18px;
