clip long lines in sbs diff view this is still pretty lame, but it's better than it was. see bug #334837

--- a/loggerhead/static/css/diff.css
+++ b/loggerhead/static/css/diff.css
@@ -120,7 +120,10 @@ ul#list-files li.desc {
     padding:0px 1%;
 }
 .unified .code { width:89%; }
-.sbs .code, .blank { width:43%; }
+.sbs .code, .blank {
+    width:43%;
+    overflow: hidden;
+}
 .unified .insert-row .lineNumber.first {
     background:#c9ffc9;
 }
