i think this is how i want the links to work

--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -11,6 +11,9 @@ a, a:link, a:visited, a:hover {
 	font-weight:normal;
 	outline:none;
 }
+b a:link, b a:visited {
+    font-weight: bold;
+}
 img {
 	padding:0px;
 	margin:0px;
