Add tags information (bug #246739)

--- a/loggerhead/static/css/diff.css
+++ b/loggerhead/static/css/diff.css
@@ -31,7 +31,7 @@ ul#list-files li.desc {
     width:493px;
     margin:0px 0px 5px 0px;
 }
-.information, .committer, .timer, .mfrom, .mto, .revid, .bug {
+.information, .committer, .timer, .mfrom, .mto, .revid, .bug, .tags {
     clear:both;
     margin:0px;
     padding:0px 0px 2px 18px;
@@ -39,7 +39,7 @@ ul#list-files li.desc {
     color:#666;
     background:url(../images/ico_description.gif) no-repeat top left;
 }
-.revid {
+.revid, .tags {
     padding:1px 0px 0px 18px;
     margin:0px 10px 5px 0px;
 }
