Fixed css breakage in Firefox.

--- a/loggerhead/static/css/global.css
+++ b/loggerhead/static/css/global.css
@@ -186,6 +186,7 @@ ul#submenuTabs li a {
 */
 #logentries {
     margin-bottom: 10px;
+    clear: left;
     }
 p.expand, p.codin {
     margin-right: 10px;
